--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
-venv/
+# Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+*.sqlite3
+*.db
+
+# Virtual envs
+venv/
+venv310/
+.env/
+.venv/
+
+# macOS
 .DS_Store
+
+# Build artifacts / temp
+*.log
+tmp/
